--- a/mysite/static/home.html
+++ b/mysite/static/home.html
@@ -4,47 +4,33 @@
 <html lang="en">
 
 <head>
-    <title>{% block title %}T|Vision{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    <script src="{% static 'animation.js' %}"></script>
+  <title>{% block title %}T|Vision{% endblock %}</title>
+  <link rel="stylesheet" href="{% static 'style.css' %}">
+  <script src="{% static 'animation.js' %}"></script>
 </head>
 
 <body>
-    <!-- title -->
-    <div class="title">
-        <h1>T|Vision</h1>
-    </div>
+  <!-- title -->
+  <div class="title">
+      <h1 class="title">T|Vision</h1>
+  </div>
 
-    <!-- user input in order to display -->
-    <div class="home_text">
-        <p class="display">Display:</p>
-        <p class="date_range">Date Range:</p>
-        <button class="homeSubmit">Submit</button>
-    </div>
+  <!-- user input in order to display -->
+  <div class="home_text">
+      <p class="display">Display:</p>
+      <p class="date_range">Date Range:</p>
+      <button class="homeSubmit" onclick="changePage()">Submit</button>
+  </div>
 
-    <!-- dropdown menu to select what to display -->
-    <div class="display_choices">
-      <!--<button onclick="myFunction()" class="dropbtn">Choose Display</button>-->
-      <!--<form action="/action_page.php">-->
-      <label class="switch">
-        <input type="checkbox">
-        <span class="slider round"></span>
-      </label>
-      <label class="switch">
-        <input type="checkbox">
-        <span class="slider round"></span>
-      </label>
-      <label class="switch">
-        <input type="checkbox">
-        <span class="slider round"></span>
-      </label>
-      <!--
-      <div id="displayDropdown" class="dropdown-content">
-        <a href="#auto">Auto</a>
-        <a href="#release">Releases</a>
-        <a href="#bug">Bugs</a>
-        <a href="#all">All</a>
-      </div>-->
+  <!-- dropdown menu to select what to display -->
+  <div class="display_choices">
+    <input type="checkbox" id="auto_choice" class="auto_choice">
+    <input type="checkbox" id="release_choice" class="release_choice">
+    <input type="checkbox" id="bugs_choice" class="bugs_choice">
+    <p id="autoText" class="autoText">AUTO</p>
+    <p id="releaseText" class="releaseText">RELEASE</p>
+    <p id="bugsText" class="bugsText">BUGS</p>
+    <a href>
   </div>
 
   <!-- what date(s) to display -->
@@ -54,37 +40,32 @@
       <input type="date" id="endDate" class="endDate" value="mm/dd/yyyy">
   </div>
 
-  <!-- display "auto" updates -->
-  <div class="auto_updates">
+  <!-- auto section -->
+  <div id="autoSection">
+    <h1 class="autoSection">Auto Update</h1>
   </div>
 
-  <!-- display "release" updates -->
+<!-- JS file that needs to also be fixed -->
+<script>
+// Get the checkbox
+var autoBox = document.getElementById("auto_choice");
+var releaseBox = document.getElementById("release_choice");
+var bugsBox = document.getElementById("bugs_choice");
 
-  <!-- JS code to move -->
-  <script>
+var startDate = document.getElementById("startDate");
+var endDate = document.getElementById("endDate");
 
-  /* When the user clicks on the button,
-  toggle between hiding and showing the dropdown content */
-  function myFunction() {
-    document.getElementById("displayDropdown").classList.toggle("show");
-    document.getElementById("date").classList.toggle("show");
+function changePage() {
+  if (autoBox.checked == true) {
+    window.open('localhost:8000/tvision/display');
   }
+}
 
-  // Close the dropdown if the user clicks outside of it
-  window.onclick = function(event) {
-    if (!event.target.matches('.dropbtn')) {
-      var dropdowns = document.getElementsByClassName("displayDropdown");
-      var i;
-      for (i = 0; i < dropdowns.length; i++) {
-        var openDropdown = dropdowns[i];
-        if (openDropdown.classList.contains('show')) {
-          openDropdown.classList.remove('show');
-        }
-      }
-    }
-  }
-  </script>
-
+function pageScroll() {
+    window.scrollBy(0,1);
+    scrolldelay = setTimeout(pageScroll,10);
+}
+</script>
 
 </body>
 
