--- a/mysite/static/home.html
+++ b/mysite/static/home.html
@@ -1,34 +1,24 @@
 {% load static from staticfiles%}
-<!--<!DOCTYPE html>-->
-
 <html lang="en">
-<style>
-
-p.date_range {
-  font-size: 20px;
-  position: absolute;
-  top: 100px;
-  left: 900px;
-}
-
-</style>
-
 <head>
   <title>{% block title %}T|Vision{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'style.css' %}">
   <script src="{% static 'animation.js' %}"></script>
+
 </head>
 
 <body>
   <!-- title -->
   <div class="title">
-      <h1 class="title">T|Vision</h1>
+      <h1 class="autoText">Auto Updates</h1>
+      <h1 class="releaseText">Release Updates</h1>
+      <h1 class="bugText">Bug Updates</h1>
   </div>
 
   <!-- user input in order to display -->
   <div class="home_text">
-      <p class="date_range">Dates:</p>
-      <button class="homeSubmit" onclick="changePage()">Submit</button>
+      <p class="date_range">Displaying Dates:</p>
+      <button class="homeSubmit" onclick="pageScroll()">Submit</button>
   </div>
 
   <!-- dropdown menu to select what to display --> <!--
@@ -49,6 +39,8 @@ p.date_range {
       <input type="date" id="endDate" class="endDate" value="mm/dd/yyyy">
   </div>
 
+  <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
   <!-- auto section -->
   <!--
   <div id="autoSection">
@@ -65,16 +57,31 @@ var bugsBox = document.getElementById("bugs_choice");
 var startDate = document.getElementById("startDate");
 var endDate = document.getElementById("endDate");
 
-
-function changePage() {
-  if (autoBox.checked == true) {
-    window.open('display.html');
-  }
-}
-
+/*
 function pageScroll() {
     window.scrollBy(0,1);
     scrolldelay = setTimeout(pageScroll,10);
+} */
+
+// When the user scrolls down 20px from the top of the document, show the button
+//window.onscroll = function() {pageScroll()};
+
+function pageScroll() {
+  window.scrollBy(0,1);
+  scrolldelay = setTimeout(pageScroll,10);
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    document.getElementById("myBtn").style.display = "block";
+  } else {
+    document.getElementById("myBtn").style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0; // For Safari
+  document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+  clearTimeout(scrolldelay);
+  document.getElementById("myBtn").style.display = "none";
 }
 
 </script>
