--- a/mysite/static/home.html
+++ b/mysite/static/home.html
@@ -1,5 +1,7 @@
 {% load static from staticfiles %}
+<!DOCTYPE html>
 <html lang="en">
+<meta charset="utf-8">
 <head>
   <title>{% block title %}T|Vision{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'style.css' %}">
@@ -14,8 +16,10 @@
       <h1 class="autoText">Auto Updates</h1>
       <p class="small_title_auto">showing auto updates</p>
       {% for a in auto %}
+      <div class="auto_description">
         <p> title: {{a.title_text}} </p>
         <p> description: {{a.description_text}} </p>
+      </div>
       {% endfor %}
     </div>
 
@@ -23,8 +27,10 @@
       <h1 class="releaseText">Release Updates</h1>
       <p class="small_title_release">showing release updates</p>
       {% for a in release %}
+      <div class="release_description">
         <p> release: {{a.title_text}} </p>
         <p> description: {{a.description_text}} </p>
+      </div>
       {% endfor %}
     </div>
 
@@ -32,11 +38,13 @@
       <h1 class="bugText">Bug Updates</h1>
       <p class="small_title_bugs">showing bug updates</p>
       {% for a in bugs %}
+      <div class="bug_description">
         <p> bug: {{a.title_text}} </p>
         <p> description: {{a.description_text}} </p>
-        {% endfor %}
+      </div>
+      {% endfor %}
     </div>
-    
+
   </div>
 
   <!-- user input in order to display -->
