--- a/mysite/static/home.html
+++ b/mysite/static/home.html
@@ -4,11 +4,20 @@
 <meta charset="utf-8">
 <head>
   <title>{% block title %}T|Vision{% endblock %}</title>
-  <link rel="stylesheet" type="text/css" media="all" href="{% static 'style.css' %}"/>
+  <link rel="stylesheet" type="text/css" media="all" href="{% static 'style.css' %}">
   <!--<link rel="stylesheet" href="{% static 'style.css' %}">-->
   <script src="{% static 'animation.js' %}"></script>
 
-<!--  <style>
+<style>
+h1 {
+  color: rgb(0,0,0);
+  font-size: 100px;
+  font-variant: small-caps;
+  text-align: left;
+  position: absolute;
+  top: 250px;
+}
+
 /* auto update section */
 h1.autoText {
   color: rgb(255,255,255);
@@ -18,22 +27,25 @@ h1.autoText {
   background-color: rgb(255,0,255);
   background: rgb(255,0,255);
   padding-left: 470px;
-  padding-right: 470px;
+  padding-right: 470px;*/
   position: absolute;
-  top: 0px;
-}
-
-p.small_title_auto {
-  position: relative;
-  left: 30px;
-  top: 125px;
-  font-size: 75px;
+  top: 800px;
 }
 
 div.auto_description {
   position:relative;
-  top: 200px;
+  top: 980px;
   left: 30px;
+}
+
+p.title {
+  font-size: 50px;
+  font-family: Verdana, sans-serif;
+}
+
+p.description {
+  font-size: 20px;
+  font-family: Verdana, sans-serif;
 }
 
 /* release update section */
@@ -47,14 +59,7 @@ h1.releaseText {
   padding-left: 385px;
   padding-right: 385px;
   position: relative;
-  top: 300px;
-}
-
-p.small_title_release {
-  position: relative;
-  left: 30px;
-  top: 900px;
-  font-size: 75px;
+  top: 1000px;
 }
 
 div.release_description {
@@ -74,14 +79,7 @@ h1.bugText {
   padding-left: 480px;
   padding-right: 480px;
   position: relative;
-  top: 400px;
-}
-
-p.small_title_bugs {
-  position: relative;
-  left: 30px;
-  top: 1860px;
-  font-size: 75px;
+  top: 1025px;
 }
 
 div.bug_description {
@@ -89,45 +87,117 @@ div.bug_description {
   top: 980px;
   left: 30px;
 }
-</style> -->
+
+/* date range stuff */
+/* "Displaying images" */
+/*p.display {
+  font-size: 20px;
+  position: absolute;
+  top: 200px;
+  left: 630px;
+}*/
+
+p.date_range {
+  font-size: 20px;
+  position: absolute;
+  top: 420px;
+  left: 200px;
+}
+
+p.range_word {
+  font-size: 20px;
+  position: absolute;
+  top: 420px;
+  left: 520px;
+}
+
+/* submit button to diplay */
+.homeSubmit {
+  position: absolute;
+  top: 442px;
+  left: 715px;
+}
+
+/* date */
+input.startDate {
+  display: block;
+  position: absolute;
+  top: 440px;
+  left: 350px;
+  width: 150px;
+}
+
+input.endDate {
+  display: block;
+  position: absolute;
+  top: 440px;
+  left: 550px;
+  width: 150px;
+}
+
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: red; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
+</style>
 
 </head>
 
 <body>
   <!-- title -->
   <div class="section">
+    <h1>Welcome to
+      <a
+        class="typewrite" data-period="2000" data-type='["T|Vision.","Summaries.","Auto Updates.","Release Updates.","Bug Updates."]'>
+        <span class="wrap"></span>
+      </a>
+    </h1>
+
     <div class"autoSection">
       <h1 class="autoText">Auto Updates</h1>
-      <!--<p class="small_title_auto">showing auto updates</p>-->
       {% for a in auto %}
       <div class="auto_description">
-        <p> title: {{a.title_text}} </p>
-        <p> description: {{a.description_text}} </p>
-        <img src="{{a.upload.url}}" alt="BUT WHY" height="500"/>
-        <!--<input type="file" onChange="handleImage(this)" />
-        <img id="display_image" src="#" alt="your image" />-->
+        <p class="title"> {{a.title_text}} </p>
+        <p class="description"> date: {{a.pub_date}} </p>
+        <p class="description"> description: {{a.description_text}} </p>
+        <img src="{{a.upload.url}}" alt="BUT WHY" height="300"/>
       </div>
       {% endfor %}
     </div>
 
     <div class="releaseSection">
       <h1 class="releaseText">Release Updates</h1>
-      <!--<p class="small_title_release">showing release updates</p>-->
       {% for a in release %}
       <div class="release_description">
         <p> release: {{a.title_text}} </p>
         <p> description: {{a.description_text}} </p>
+        <img src="{{a.upload.url}}" alt="BUT WHY" height="300"/>
       </div>
       {% endfor %}
     </div>
 
     <div class="bugSection">
       <h1 class="bugText">Bug Updates</h1>
-      <!--<p class="small_title_bugs">showing bug updates</p>-->
       {% for a in bugs %}
       <div class="bug_description">
         <p> bug: {{a.title_text}} </p>
         <p> description: {{a.description_text}} </p>
+        <img src="{{a.upload.url}}" alt="BUT WHY" height="300"/>
       </div>
       {% endfor %}
     </div>
@@ -152,10 +222,11 @@ div.bug_description {
   </div> -->
 
   <!-- what date(s) to display -->
-  <div id="date" class="date">
-    <input type="date" id="startDate" class="startDate" value="mm/dd/yyyy">
+  <!-- https://stackoverflow.com/questions/47264373/importing-date-from-html-into-django-views -->
+  <div id="date" class="date" method="GET">
+    <input type="date" id="startDate" class="startDate" name="startDate" value="mm/dd/yyyy">
     <p class="range_word">to</p>
-    <input type="date" id="endDate" class="endDate" value="mm/dd/yyyy">
+    <input type="date" id="endDate" class="endDate" name="startDate" value="mm/dd/yyyy">
   </div>
 
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
@@ -212,6 +283,64 @@ function handleImage(input) {
     reader.readAsDataURL(input.files[0]);
   }
 }
+
+// typing carousel
+var TxtType = function(el, toRotate, period) {
+    this.toRotate = toRotate;
+    this.el = el;
+    this.loopNum = 0;
+    this.period = parseInt(period, 10) || 2000;
+    this.txt = '';
+    this.tick();
+    this.isDeleting = false;
+};
+
+TxtType.prototype.tick = function() {
+  var i = this.loopNum % this.toRotate.length;
+  var fullTxt = this.toRotate[i];
+
+  if (this.isDeleting) {
+    this.txt = fullTxt.substring(0, this.txt.length - 1);
+  } else {
+    this.txt = fullTxt.substring(0, this.txt.length + 1);
+  }
+
+  this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+  var that = this;
+  var delta = 200 - Math.random() * 50;
+
+  if (this.isDeleting) { delta /= 2; }
+
+  if (!this.isDeleting && this.txt === fullTxt) {
+    delta = this.period;
+    this.isDeleting = true;
+  } else if (this.isDeleting && this.txt === '') {
+    this.isDeleting = false;
+    this.loopNum++;
+    delta = 500;
+  }
+
+  setTimeout(function() {
+    that.tick();
+  }, delta);
+};
+
+window.onload = function() {
+  var elements = document.getElementsByClassName('typewrite');
+  for (var i=0; i<elements.length; i++) {
+    var toRotate = elements[i].getAttribute('data-type');
+    var period = elements[i].getAttribute('data-period');
+    if (toRotate) {
+      new TxtType(elements[i], JSON.parse(toRotate), period);
+    }
+  }
+  // INJECT CSS
+  var css = document.createElement("style");
+  css.type = "text/css";
+  css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+  document.body.appendChild(css);
+};
 
 </script>
 
