--- a/mysite/static/home.html
+++ b/mysite/static/home.html
@@ -172,17 +172,9 @@ input.endDate {
 <body>
 
   <!-- what date(s) to display -->
-  <!-- https://stackoverflow.com/questions/47264373/importing-date-from-html-into-django-views -->
   <div id="date" class="date">
-    <!--<form method="GET">
-      <input type="date" id="startDate" class="startDate" name="startDate" value="mm/dd/yyyy">
-      <p class="range_word">to</p>
-      <input type="date" id="endDate" class="endDate" name="endDate" value="mm/dd/yyyy">
-    </form>-->
-
     <form method="GET">{% csrf_token %}
       DISPLAY BETWEEN {{ start_date }} AND {{ end_date }}
-      <!--<button type="submit" class="homeSubmit" onclick="pageScroll()">Submit</button>-->
     </form>
     <input class="homeSubmit" onclick="pageScroll()" type="submit" value="Submit" />
   </div>
@@ -203,7 +195,8 @@ input.endDate {
         <p class="title"> {{a.title_text}} </p>
         <p class="description"> date: {{a.pub_date}} </p>
         <p class="description"> description: {{a.description_text}} </p>
-        <img src="{{a.upload.url}}" alt="BUT WHY" height="300"/>
+        <img src="{{a.upload.url}}" alt="no image provided" height="300"></img><br>
+        <a href="{{a.link.user_link}}" alt="no link provided">{{a.link.link_title}}</a>
       </div>
       {% endfor %}
     </div>
@@ -212,9 +205,11 @@ input.endDate {
       <h1 class="releaseText">Release Updates</h1>
       {% for a in release %}
       <div class="release_description">
-        <p> release: {{a.title_text}} </p>
-        <p> description: {{a.description_text}} </p>
-        <img src="{{a.upload.url}}" alt="BUT WHY" height="300"/>
+        <p class="title"> {{a.title_text}} </p>
+        <p class="description"> date: {{a.pub_date}} </p>
+        <p class="description"> description: {{a.description_text}} </p>
+        <img src="{{a.upload.url}}" alt="no image provided" height="300"></img><br>
+        <a href="{{a.link.user_link}}" alt="no link provided">{{a.link.link_title}}</a>
       </div>
       {% endfor %}
     </div>
@@ -223,38 +218,17 @@ input.endDate {
       <h1 class="bugText">Bug Updates</h1>
       {% for a in bugs %}
       <div class="bug_description">
-        <p> bug: {{a.title_text}} </p>
-        <p> description: {{a.description_text}} </p>
-        <img src="{{a.upload.url}}" alt="BUT WHY" height="300"/>
+        <p class="title"> {{a.title_text}} </p>
+        <p class="description"> date: {{a.pub_date}} </p>
+        <p class="description"> description: {{a.description_text}} </p>
+        <img src="{{a.upload.url}}" alt="no image provided" height="300"></img><br>
+        <a href="{{a.link.user_link}}" alt="no link provided">Link: {{a.link.link_title}}</a>
       </div>
       {% endfor %}
     </div>
   </div>
 
-  <!-- user input in order to display
-  <div class="home_text">
-    <p class="date_range">Displaying Dates:</p>
-    <button class="homeSubmit" onclick="pageScroll()">Submit</button>
-  </div> -->
-
-  <!-- dropdown menu to select what to display --> <!--
-  <div class="display_choices">
-    <input type="checkbox" id="auto_choice" class="auto_choice">
-    <input type="checkbox" id="release_choice" class="release_choice">
-    <input type="checkbox" id="bugs_choice" class="bugs_choice">
-    <p id="autoText" class="autoText">AUTO</p>
-    <p id="releaseText" class="releaseText">RELEASE</p>
-    <p id="bugsText" class="bugsText">BUGS</p>
-    <a href>
-  </div> -->
-
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
-  <!-- auto section -->
-  <!--
-  <div id="autoSection">
-    <h1 class="autoSection">Auto Update</h1>
-  </div> -->
 
 <!-- JS file that needs to also be fixed -->
 <script>
@@ -262,15 +236,6 @@ input.endDate {
 var autoBox = document.getElementById("auto_choice");
 var releaseBox = document.getElementById("release_choice");
 var bugsBox = document.getElementById("bugs_choice");
-
-/*
-function pageScroll() {
-    window.scrollBy(0,1);
-    scrolldelay = setTimeout(pageScroll,10);
-} */
-
-// When the user scrolls down 20px from the top of the document, show the button
-//window.onscroll = function() {pageScroll()};
 
 function pageScroll() {
   window.scrollBy(0,1);
@@ -351,6 +316,7 @@ window.onload = function() {
       new TxtType(elements[i], JSON.parse(toRotate), period);
     }
   }
+
   // INJECT CSS
   var css = document.createElement("style");
   css.type = "text/css";
@@ -358,13 +324,6 @@ window.onload = function() {
   document.body.appendChild(css);
 };
 
-$(function() {
-  $(".datepicker").datepicker({
-    changeMonth : true,
-    chageYear : true,
-    yearRange : "1900:2019",
-  })
-})
 
 </script>
 
