--- a/mysite/static/home.html
+++ b/mysite/static/home.html
@@ -94,14 +94,6 @@ div.bug_description {
   left: 30px;
 }
 
-/* date range stuff */
-/* "Displaying images" */
-/*p.display {
-  font-size: 20px;
-  position: absolute;
-  top: 200px;
-  left: 630px;
-}*/
 div.date {
   position: absolute;
   top: 440px;
@@ -180,7 +172,7 @@ input.endDate {
   </div>
 
   <!-- title -->
-  <div class="section">
+  <div>
     <h1>Welcome to
       <a
         class="typewrite" data-period="2000" data-type='["T|Vision.","Summaries.","Auto Updates.","Release Updates.","Bug Updates."]'>
@@ -323,7 +315,6 @@ window.onload = function() {
   css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
   document.body.appendChild(css);
 };
-
 
 </script>
 
