--- a/mysite/static/home.html
+++ b/mysite/static/home.html
@@ -138,6 +138,11 @@ input.endDate {
   width: 150px;
 }
 
+img.piechart {
+  width: 200px;
+  height: 400px;
+}
+
 #myBtn {
   display: none; /* Hidden by default */
   position: fixed; /* Fixed/sticky position */
@@ -171,6 +176,7 @@ input.endDate {
     <input class="homeSubmit" onclick="pageScroll()" type="submit" value="Submit" />
   </div>
 
+  <img src="chart.PNG" alt="something" height="300"></img>
   <!-- title -->
   <div>
     <h1>Welcome to
@@ -178,7 +184,6 @@ input.endDate {
         class="typewrite" data-period="2000" data-type='["T|Vision.","Summaries.","Auto Updates.","Release Updates.","Bug Updates."]'>
         <span class="wrap"></span>
       </a></br>
-      <img src="{{ 'media/web_images/chart.png' }}" class="piechart" alt="display pie chart">
     </h1>
 
     <div class"autoSection">
