--- a/mysite/static/home.html
+++ b/mysite/static/home.html
@@ -138,9 +138,12 @@ input.endDate {
   width: 150px;
 }
 
-img.piechart {
-  width: 200px;
-  height: 400px;
+div.main_images {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 400px;
+  height: 200px;
 }
 
 #myBtn {
@@ -167,16 +170,20 @@ img.piechart {
 </head>
 
 <body>
-
   <!-- what date(s) to display -->
   <div id="date" class="date">
-    <form method="GET">{% csrf_token %}
+    <form method="GET">
+      {% csrf_token %}
       DISPLAY BETWEEN {{ start_date }} AND {{ end_date }}
     </form>
     <input class="homeSubmit" onclick="pageScroll()" type="submit" value="Submit" />
   </div>
 
-  <img src="chart.PNG" alt="something" height="300"></img>
+  {% block content %}
+  <div class="main_images">
+    <img src="{{main.upload.url}}"  alt="no image provided" onerror="this.style.display='none'" height="300"></img>
+  </div>
+  {% endblock %}
   <!-- title -->
   <div>
     <h1>Welcome to
@@ -199,6 +206,11 @@ img.piechart {
         <p class="description"> Comments: {{a.comments|linebreaks}} </p>
         <img src="{{a.upload.url}}" alt="no image provided" onerror="this.style.display='none'" height="300"></img>
         <h4> Attached URL: <a href="{{a.link.user_link}}" target="_blank" alt="no link provided">{{a.link.link_title}}</a></h4>
+        <form method="GET">
+          {% csrf_token %}
+          Attached document: <a href="{{ a.document_link }}">download</a>
+          <!-- how to insert file:; https://stackoverflow.com/questions/22429076/show-file-link-in-template-->
+        </form>
       </div>
       {% endfor %}
     </div>
